add interface logic

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Movie Tickets</h1>
 
       <div class="form-container">
-       <form id="quiz">
+       <form id="movies-form">
          <div class="form-group has-success">
            <label for="movies" class="control-label">Select a Film</label>
            <select class="form-control" id="movies">
@@ -26,7 +26,7 @@
          </div>
          <div class="form-group has-success">
            <label for="question2" class="control-label">Select a Time</label>
-           <select class="form-control" id="question2">
+           <select class="form-control" id="times">
              <option value="0">6:30AM</option>
              <option value="0">12:00PM</option>
              <option value="1">7:00PM</option>
@@ -34,8 +34,8 @@
            </select>
          </div>
          <div class="form-group has-success">
-           <label for="question2" class="control-label">select your age</label>
-           <select class="form-control" id="question2">
+           <label for="question2" class="control-label">Select your age</label>
+           <select class="form-control" id="age">
              <option value="0">Senior (65+)</option>
              <option value="1">Adult (18+)</option>
              <option value="0">Child (Below 18)</option>
