add buisness logic

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
          <div class="form-group has-success">
            <label for="movies" class="control-label">Select a Film</label>
            <select class="form-control" id="movies">
-             <option value="1">Fast and the Furious 17: The Revengence</option>
-             <option value="1">LARPers: A Life in a Day</option>
-             <option value="1">Hoarders: The Movie</option>
-             <option value="0">The Emoji Movie</option>
-             <option value="0">Transformers 38: still not as cool as Gundam</option>
-             <option value="0">Loneliness: When WoW takes hold</option>
+             <option value="15">Fast and the Furious 17: The Revengence</option>
+             <option value="15">LARPers: A Life in a Day 3D</option>
+             <option value="10">Hoarders: The Movie</option>
+             <option value="2">The Emoji Movie</option>
+             <option value="8">Transformers 38: still not as cool as Gundam</option>
+             <option value="10">Loneliness: When WoW takes hold</option>
            </select>
          </div>
          <div class="form-group has-success">
            <label for="question2" class="control-label">Select a Time</label>
            <select class="form-control" id="times">
-             <option value="0">6:30AM</option>
-             <option value="0">12:00PM</option>
+             <option value="-1">6:30AM</option>
+             <option value="-1">12:00PM</option>
              <option value="1">7:00PM</option>
              <option value="1">10:00PM</option>
            </select>
@@ -36,7 +36,7 @@
          <div class="form-group has-success">
            <label for="question2" class="control-label">Select your age</label>
            <select class="form-control" id="age">
-             <option value="0">Senior (65+)</option>
+             <option value="-1">Senior (65+)</option>
              <option value="1">Adult (18+)</option>
              <option value="0">Child (Below 18)</option>
            </select>
