add function to calculate cost

--- a/index.html
+++ b/index.html
@@ -16,33 +16,42 @@
          <div class="form-group has-success">
            <label for="movies" class="control-label">Select a Film</label>
            <select class="form-control" id="movies">
-             <option value="15">Fast and the Furious 17: The Revengence</option>
-             <option value="15">LARPers: A Life in a Day 3D</option>
-             <option value="10">Hoarders: The Movie</option>
-             <option value="2">The Emoji Movie</option>
-             <option value="8">Transformers 38: still not as cool as Gundam</option>
-             <option value="10">Loneliness: When WoW takes hold</option>
+             <option></option>
+             <option>Fast and the Furious 17: The Revengence</option>
+             <option>LARPers: A Life in a Day 3D</option>
+             <option>Hoarders: The Movie</option>
+             <option>The Emoji Movie</option>
+             <option>Transformers 38: Still Not as Cool as Gundam</option>
+             <option>Loneliness: When WoW takes hold</option>
            </select>
          </div>
          <div class="form-group has-success">
            <label for="question2" class="control-label">Select a Time</label>
            <select class="form-control" id="times">
-             <option value="-1">6:30AM</option>
-             <option value="-1">12:00PM</option>
-             <option value="1">7:00PM</option>
-             <option value="1">10:00PM</option>
+             <option></option>
+             <option>6:30AM</option>
+             <option>11:00AM</option>
+             <option>7:00PM</option>
+             <option>10:00PM</option>
            </select>
          </div>
          <div class="form-group has-success">
            <label for="question2" class="control-label">Select your age</label>
            <select class="form-control" id="age">
-             <option value="-1">Senior (65+)</option>
-             <option value="1">Adult (18+)</option>
-             <option value="0">Child (Below 18)</option>
+             <option></option>
+             <option>Senior (65+)</option>
+             <option>Adult (18+)</option>
+             <option>Child (Below 18)</option>
            </select>
          </div>
          <button type="submit" class ="btn btn-success">Submit</button>
        </form>
+       <div id="price">
+
+      <h1>The Price of Your Ticket is:</h1>
+      <h2><span id="cost"></span></h2>
+
+       </div>
 
   </body>
 </html>
